@@ -11,6 +11,7 @@ Important changes in 1.10 (2019-12-XX)
 * Bugfix: Cache structure was not properly initialised, causing invalid values in the database.
 * Bugfix: Skip corrupted and discarded video frames to avoid blurps.
 * Bugfix: Corrected mistake in online help: clear-cache should be clear_cache instead.
+* BUgfix: Issue #43 - fix garbled first 12 frames. Enhanced overall picture quality.
 * Workaround: Issue #45 - fix garbled Bluray/DVD playback. Just a workaround, the problem is
               somewhere else.
 * Known bug: Libav support for videos seems broken. Not sure if this will be fixed or Libav be
